Wrote a janky csv writing bot
- The way to do this is to make data reads "cat" instead of opening
textedit

- opening textedit would interfere with writing to the file while cat is
read only

- look into ways to open textedit as read-only?

- still need to tighten up code, for instance need to finda  way to save
the pid of the csv_writer, and explicitly kill it when user types "quit"

- also need to sort out if the actual bot can read from the
ocntinousouly written to file. this should be fine as long as it's truly
READ ONLY!

--- a/process-experimentation/Makefile
+++ b/process-experimentation/Makefile
@@ -1,6 +1,6 @@
 build: 
-	ocamlbuild -use-ocamlfind processes.byte
+	ocamlbuild -use-ocamlfind processes.byte text_opener.byte
 run: 
-	ocamlbuild -use-ocamlfind processes.byte && ./processes.byte
+	ocamlbuild -use-ocamlfind processes.byte text_opener.byte && ./processes.byte
 clean:
 	ocamlbuild -clean
